<resources>
    <string name="app_name">Aplikacja Egzaminatora</string>
    <string name="rate_of_positive_results_label">Zdawalność: </string>
    <string name="number_of_positive_results_label">Pozytywne: </string>
    <string name="number_of_did_not_take_an_exam_results_label">Nieprzystąpienia</string>
    <string name="number_of_negative_maneuvring_area_results_label">Negatywne (Plac)</string>
    <string name="number_of_negative_traffic_area_results_label">Negatywne (Miasto)</string>
    <string name="number_of_exams_label">Liczba egzaminów ogółem</string>
    <string name="add_exam_label">Dodaj egzamin</string>
    <string name="rate_of_positive_results">zdawalnosc</string>
    <string name="positive_results">pozytywne</string>
    <string name="did_not_take_an_exam_results">nieprzystapienia</string>
    <string name="negative_maneuvring_area_results">negatywne_plac</string>
    <string name="negative_traffic_area_results">negatywne_miasto</string>
    <string name="number_of_exams_total">liczba_egzaminow_ogolem</string>
    <string name="date_of_exam">Data egzaminu:</string>
    <string name="result_of_an_exam">Wynik egzaminu:</string>
    <string name="P">P</string>
    <string name="X">X</string>
    <string name="N">N</string>
    <string name="n">n</string>
    <string name="OK">OK</string>
    <string name="cancel">Anuluj</string>
    <string name="date_and_result_not_chosen">Nie wybrano daty i wyniku egzaminu</string>
    <string name="date_not_chosen">Nie wybrano daty egzaminu</string>
    <string name="result_not_chosen">Nie wybrano wyniku egzaminu</string>
    <string name="choose_category_label">Kategoria</string>
    <string name="choose_date">Wybierz datę</string>
    <string name="chosen_date_greater_than_today">Wybrano datę późniejszą od dzisiejszej</string>
    <string name="choose_exams_range">Wybierz zakres dat egzaminów:</string>
    <string name="explore_results">Przeglądaj wyniki</string>
    <string name="dash_character">-</string>
    <string name="start_date">Data początkowa</string>
    <string name="end_date">Data końcowa</string>
    <string name="show_exams">Pokaż egzaminy</string>
    <string name="today">Dzisiaj</string>
    <string name="this_week">Ten tydzień</string>
    <string name="this_month">Ten miesiąc</string>
    <string name="this_year">Ten rok</string>
    <string name="all_time_exams">Wszystkie</string>
    <string name="choose_dates_range">Wybierz zakres dat...</string>
    <string name="date">Data</string>
    <string name="category">Kategoria</string>
    <string name="result">Wynik</string>
    <string name="delete">Usuń</string>
    <string name="chosen_date_is_too_late">Wybierz wcześniejszą datę</string>
    <string name="chosen_date_earlier_than_start_date">Data końcowa późniejsza od początkowej</string>
    <string-array name="categories">
        <item>AM</item>
        <item>A1</item>
        <item>A2</item>
        <item>A</item>
        <item>B</item>
        <item>B96</item>
        <item>B+E</item>
        <item>B1</item>
        <item>C</item>
        <item>C+E</item>
        <item>C1</item>
        <item>C1+E</item>
        <item>D</item>
        <item>D+E</item>
        <item>D1+E</item>
        <item>T</item>
    </string-array>
    <string-array name="results">
        <item>n</item>
        <item>N</item>
        <item>X</item>
        <item>P</item>
    </string-array>
    <string name="settings">Ustawienia</string>
    <string name="load_results_from_file">Wczytaj plik z historią egzaminów</string>
    <string name="search_for_file">Wyszukaj plik</string>
    <string name="save_results_to_file">Zapisz wyniki do pliku</string>
    <string name="set_directory">Podaj ścieżkę pliku</string>
    <string name="confirm_save_button">Zapisz plik</string>
    <string name="result_deleted">Wynik egzaminu został usunięty</string>
</resources>