<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/list_item_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/list_item_category_spinner"
        android:minWidth="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/category"
        app:layout_constraintBaseline_toBaselineOf="@+id/list_item_date_button"
        app:layout_constraintStart_toEndOf="@+id/list_item_date_button" />

    <Spinner
        android:id="@+id/list_item_result_spinner"
        android:minWidth="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/result"
        app:layout_constraintBaseline_toBaselineOf="@+id/list_item_date_button"
        app:layout_constraintStart_toEndOf="@+id/list_item_category_spinner" />

    <Button
        android:id="@+id/list_item_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/delete"
        app:layout_constraintBaseline_toBaselineOf="@+id/list_item_date_button"
        app:layout_constraintStart_toEndOf="@+id/list_item_result_spinner" />

</android.support.constraint.ConstraintLayout>